# Projeto_Sistema_Bancario

./: README.md  pyproject.toml
projeto_v3_OOP/: Projeto_v3_teste.py
projeto_v4_Integração_bd/: Projeto_v4.py  banco_de_dados.db  bd.py  classes.py
